--- a/ComingSoon.html
+++ b/ComingSoon.html
@@ -29,7 +29,7 @@
               <h1 style="font-size:50px">Coming Soon</h1>
               <p>Ne cherchez pas aielleurs... Nous sommes les meilleurs</p>
               <br>
-              <a href="acceuil.html"><button>Accueil</button></a>
+              <a href="accueil.html"><button>Accueil</button></a>
             </div>
             <br>
             <center><canvas id="canvas" width="200" height="200"
