--- a/cinémas.html
+++ b/cinémas.html
@@ -26,7 +26,7 @@
             <nav class="navbar">
               <div class="container-fluid">
                 <ul class="nav navbar-nav">
-                  <li> <a href="index.html">ACCUEIL</a></li>
+                  <li> <a href="accueil.html">ACCUEIL</a></li>
                   <li><a href="index3.html">MUSEES</a></li>
                   <li><a href="index4.html">CINEMAS</a></li>
                   <li class="dropdown">
