--- a/accueil.html
+++ b/accueil.html
@@ -28,9 +28,9 @@
             <nav class="navbar">
               <div class="container-fluid">
                 <ul class="nav navbar-nav">
-                  <li> <a href="index.html">ACCUEIL</a></li>
-                  <li><a href="index3.html">MUSEES</a></li>
-                  <li><a href="index4.html">CINEMAS</a></li>
+                  <li> <a href="accueil.html">ACCUEIL</a></li>
+                  <li><a href="musées.html">MUSEES</a></li>
+                  <li><a href="cinémas.html">CINEMAS</a></li>
                   <li class="dropdown">
                     <a href="javascript:void(0)" class="dropbtn">FESTIVALES</a>
                       <div class="dropdown-content">
@@ -43,11 +43,11 @@
                   <li class="dropdown">
                     <a href="javascript:void(0)" class="dropbtn">NATURE</a>
                       <div class="dropdown-content">
-                        <a href="index5.html">Réserves et Parcs</a>
-                        <a href="Rando.html">Randonnées</a>
+                        <a href="réserves.html">Réserves et Parcs</a>
+                        <a href="randonnées.html">Randonnées</a>
                       </div>
                   </li>
-                  <li><a href="index2.html">MAISONS D'HOTE</a></li>
+                  <li><a href="maisondhotes.html">MAISONS D'HOTE</a></li>
                   <li class="dropdown">
                       <a href="javascript:void(0)" class="dropbtn">RESTAURANT</a>
                         <div class="dropdown-content">
@@ -82,7 +82,7 @@
                         <a href="http://www.sntri.com.tn/">SNCTRI</a>
                       </div>
                   </li>
-                  <li><a href="index1.html">CONTACT </a></li>
+                  <li><a href="contact.html">CONTACT </a></li>
                 </ul>
               </div>
             </nav>
