--- a/cinémas.html
+++ b/cinémas.html
@@ -22,68 +22,70 @@
         </head>
     <body>
         
-        <div class="cover">
-            <nav class="navbar">
-              <div class="container-fluid">
-                <ul class="nav navbar-nav">
-                  <li> <a href="accueil.html">ACCUEIL</a></li>
-                  <li><a href="index3.html">MUSEES</a></li>
-                  <li><a href="index4.html">CINEMAS</a></li>
-                  <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropbtn">FESTIVALES</a>
-                      <div class="dropdown-content">
-                        <a href="https://www.jcctunisie.org">JCC</a>
-                        <a href="https://jmc.tn/">JMC</a>
-                        <a href="http://jtc.tn/">JTC</a>
-                        <a href="http://http://festivaldecarthage.tn//">Festival Carthage</a>
+            <div class="cover ">
+                    <nav class="navbar">
+                      <div class="container-fluid">
+                        <ul class="nav navbar-nav">
+                          <li> <a href="accueil.html">ACCUEIL</a></li>
+                          <li><a href="musées.html">MUSEES</a></li>
+                          <li><a href="cinémas.html">CINEMAS</a></li>
+                          <li class="dropdown">
+                            <a href="javascript:void(0)" class="dropbtn">FESTIVALES</a>
+                              <div class="dropdown-content">
+                                <a href="https://www.jcctunisie.org">JCC</a>
+                                <a href="https://jmc.tn/">JMC</a>
+                                <a href="http://jtc.tn/">JTC</a>
+                                <a href="http://http://festivaldecarthage.tn//">Festival Carthage</a>
+                              </div>
+                          </li>
+                          <li class="dropdown">
+                            <a href="javascript:void(0)" class="dropbtn">NATURE</a>
+                              <div class="dropdown-content">
+                                <a href="réserves.html">Réserves et Parcs</a>
+                                <a href="randonnées.html">Randonnées</a>
+                              </div>
+                          </li>
+                          <li><a href="maisondhotes.html">MAISONS D'HOTE</a></li>
+                          <li class="dropdown">
+                              <a href="javascript:void(0)" class="dropbtn">RESTAURANT</a>
+                                <div class="dropdown-content">
+                                  <a href="ComingSoon.html">TOUNSI</a>
+                                  <a href="ComingSoon.html">ITALIEN</a>
+                                  <a href="ComingSoon.html">GASTRONOMIQUE</a>
+                                  <a href="ComingSoon.html">JAPONAIS</a>
+                                </div>
+                            </li>
+                            <li class="dropdown">
+                                <a href="javascript:void(0)" class="dropbtn">SOIREE</a>
+                                  <div class="dropdown-content">
+                                    <a href="ComingSoon.html">GAMMARETH</a>
+                                    <a href="ComingSoon.html">HAMMAMET</a>
+                                    <a href="ComingSoon.html">SOUSSE</a>
+                                  </div>
+                              </li>
+                              <li class="dropdown">
+                                  <a href="javascript:void(0)" class="dropbtn">SPORT</a>
+                                    <div class="dropdown-content">
+                                      <a href="ComingSoon.html">FOOT</a>
+                                      <a href="ComingSoon.html">TENNIS</a>
+                                      <a href="ComingSoon.html">NATATION</a>
+                                    </div>
+                              </li>
+                          <li class="dropdown">
+                            <a href="javascript:void(0)" class="dropbtn">LIENS UTILES</a>
+                              <div class="dropdown-content">
+                                <a href="http://www.meteo.tn/htmlfr/accueil.php">Météo</a>
+                                <a href="http://www.tourisme.gov.tn/accueil.html">Ministère du tourisme</a>
+                                <a href="http://www.sncft.com.tn/Fr/accueil_46_87">SNCFT</a>
+                                <a href="http://www.sntri.com.tn/">SNCTRI</a>
+                              </div>
+                          </li>
+                          <li><a href="contact.html">CONTACT </a></li>
+                        </ul>
                       </div>
-                  </li>
-                  <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropbtn">NATURE</a>
-                      <div class="dropdown-content">
-                        <a href="index5.html">Réserves et Parcs</a>
-                        <a href="Rando.html">Randonnées</a>
-                      </div>
-                  </li>
-                  <li><a href="index2.html">MAISONS D'HOTE</a></li>
-                  <li class="dropdown">
-                      <a href="javascript:void(0)" class="dropbtn">RESTAURANT</a>
-                        <div class="dropdown-content">
-                          <a href="#">TOUNSI</a>
-                          <a href="#">ITALIEN</a>
-                          <a href="#">GASTRONOMIQUE</a>
-                          <a href="#">JAPONAIS</a>
-                        </div>
-                    </li>
-                    <li class="dropdown">
-                        <a href="javascript:void(0)" class="dropbtn">SOIREE</a>
-                          <div class="dropdown-content">
-                            <a href="#">GAMMARETH</a>
-                            <a href="#">HAMMAMET</a>
-                            <a href="#">SOUSSE</a>
-                          </div>
-                      </li>
-                      <li class="dropdown">
-                          <a href="javascript:void(0)" class="dropbtn">SPORT</a>
-                            <div class="dropdown-content">
-                              <a href="#">FOOT</a>
-                              <a href="#">TENNIS</a>
-                              <a href="#">NATATION</a>
-                            </div>
-                      </li>
-                  <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropbtn">LIENS UTILES</a>
-                      <div class="dropdown-content">
-                        <a href="http://www.meteo.tn/htmlfr/accueil.php">Météo</a>
-                        <a href="http://www.tourisme.gov.tn/accueil.html">Ministère du tourisme</a>
-                        <a href="http://www.sncft.com.tn/Fr/accueil_46_87">SNCFT</a>
-                        <a href="http://www.sntri.com.tn/">SNCTRI</a>
-                      </div>
-                  </li>
-                  <li><a href="index1.html">CONTACT </a></li>
-                </ul>
-              </div>
-            </nav>
+                    </nav>
+                </div>   
+                
         </div>   
         <h2><center><b>SORTIES CINEMA</b> </center></h2>
         <div class="w3-container">   
