--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,12 @@
 </head>
 <body>
   
-    <button type="button" > <a href="accueil.html">ACCEUIL</a> </button>
+    <a href="accueil.html"><button type="button" > ACCEUIL</button></a>
   <div class="container">
     <h1 class="brand"><span>DECOUVREZ</span> <span id="fan">LA TUNISIE</span></h1>
     <div class="wrapper">
       <div class="company-info">
-        <h5>Programmez vos sortis plus facilement</h5>
+        <h5>Ne cherchez pas ailleurs, nous sommes les meilleurs/h5>
         <ul>
           <li><i class="fa fa-road"></i> Tunis Tunisia</li>
           <li><i class="fa fa-phone"></i> (+216) 71 12 34 56</li>
