--- a/musées.html
+++ b/musées.html
@@ -23,13 +23,13 @@
     </head>
     <body>
 
-            <div class="cover">
+            <div class="cover ">
                     <nav class="navbar">
                       <div class="container-fluid">
                         <ul class="nav navbar-nav">
-                          <li> <a href="index.html">ACCUEIL</a></li>
-                          <li><a href="index3.html">MUSEES</a></li>
-                          <li><a href="index4.html">CINEMAS</a></li>
+                          <li> <a href="accueil.html">ACCUEIL</a></li>
+                          <li><a href="musées.html">MUSEES</a></li>
+                          <li><a href="cinémas.html">CINEMAS</a></li>
                           <li class="dropdown">
                             <a href="javascript:void(0)" class="dropbtn">FESTIVALES</a>
                               <div class="dropdown-content">
@@ -42,36 +42,36 @@
                           <li class="dropdown">
                             <a href="javascript:void(0)" class="dropbtn">NATURE</a>
                               <div class="dropdown-content">
-                                <a href="index5.html">Réserves et Parcs</a>
-                                <a href="Rando.html">Randonnées</a>
+                                <a href="réserves.html">Réserves et Parcs</a>
+                                <a href="randonnées.html">Randonnées</a>
                               </div>
                           </li>
-                          <li><a href="index2.html">MAISONS D'HOTE</a></li>
+                          <li><a href="maisondhotes.html">MAISONS D'HOTE</a></li>
                           <li class="dropdown">
-                                <a href="javascript:void(0)" class="dropbtn">RESTAURANT</a>
+                              <a href="javascript:void(0)" class="dropbtn">RESTAURANT</a>
+                                <div class="dropdown-content">
+                                  <a href="ComingSoon.html">TOUNSI</a>
+                                  <a href="ComingSoon.html">ITALIEN</a>
+                                  <a href="ComingSoon.html">GASTRONOMIQUE</a>
+                                  <a href="ComingSoon.html">JAPONAIS</a>
+                                </div>
+                            </li>
+                            <li class="dropdown">
+                                <a href="javascript:void(0)" class="dropbtn">SOIREE</a>
                                   <div class="dropdown-content">
-                                    <a href="#">TOUNSI</a>
-                                    <a href="#">ITALIEN</a>
-                                    <a href="#">GASTRONOMIQUE</a>
-                                    <a href="#">JAPONAIS</a>
+                                    <a href="ComingSoon.html">GAMMARETH</a>
+                                    <a href="ComingSoon.html">HAMMAMET</a>
+                                    <a href="ComingSoon.html">SOUSSE</a>
                                   </div>
                               </li>
                               <li class="dropdown">
-                                  <a href="javascript:void(0)" class="dropbtn">SOIREE</a>
+                                  <a href="javascript:void(0)" class="dropbtn">SPORT</a>
                                     <div class="dropdown-content">
-                                      <a href="#">GAMMARETH</a>
-                                      <a href="#">HAMMAMET</a>
-                                      <a href="#">SOUSSE</a>
+                                      <a href="ComingSoon.html">FOOT</a>
+                                      <a href="ComingSoon.html">TENNIS</a>
+                                      <a href="ComingSoon.html">NATATION</a>
                                     </div>
-                                </li>
-                                <li class="dropdown">
-                                    <a href="javascript:void(0)" class="dropbtn">SPORT</a>
-                                      <div class="dropdown-content">
-                                        <a href="#">FOOT</a>
-                                        <a href="#">TENNIS</a>
-                                        <a href="#">NATATION</a>
-                                      </div>
-                                </li>
+                              </li>
                           <li class="dropdown">
                             <a href="javascript:void(0)" class="dropbtn">LIENS UTILES</a>
                               <div class="dropdown-content">
@@ -81,11 +81,12 @@
                                 <a href="http://www.sntri.com.tn/">SNCTRI</a>
                               </div>
                           </li>
-                          <li><a href="index1.html">CONTACT </a></li>
+                          <li><a href="contact.html">CONTACT </a></li>
                         </ul>
                       </div>
                     </nav>
-                </div>   
+                </div>      
+
             <br>
             <h1 id="title">MUSEES</h1>
             <div class="slideshow-container ">
