--- a/maisondhotes.html
+++ b/maisondhotes.html
@@ -100,7 +100,7 @@
                           <h3>Couleur Méditerranée</h3>
                           <ul> 
                               <li><b>Adresse:</b> Tabarka </li>
-                              <li><b>Téléphone: (+216)52 040 314 </b></li>
+                              <li><b>Téléphone:</b> (+216)52 040 314 </li>
                               <li><b>Mail:</b>contact@couleur.com</li>
                               <li ><b>Page FB:</b> <a href="https://www.facebook.com/Maison-dh%C3%B4tes-Couleur-M%C3%A9diterran%C3%A9e-1456449357970897/">Couleur Méditerranée</a></li>
                           </ul>    
