--- a/maisondhotes.html
+++ b/maisondhotes.html
@@ -94,7 +94,7 @@
             <hr>
               <h3>Plein de maisons d'hôte, partout en Tunisie</h3>
               <div class="row ">
-                  <div class="column col-md-2 col-sm-4 col-xs-6">
+                  <div class="column">
                       <div class="content">
                           <img  src="res/tabarka.jpg" alt="Couleur Méditerranée" style="width:100%">
                           <h3>Couleur Méditerranée</h3>
