--- a/maisondhotes.html
+++ b/maisondhotes.html
@@ -8,9 +8,9 @@
         <meta name="keywords" content="Tourisme, Histoire, Verdure, Paix, Gastronomie, Nature, Vacances, Plages, Camping, Randonnées, Carthage, Culture">
         <meta name="author" content="Mahdi ABDERRAHIM">
         <title>MAISONS D'HOTES</title>
-        <meta property="og:site_name" content="PRGRAMMI TOUNSI">
+        <meta property="og:site_name" content="Easy to go">
         <meta property="og:url" content="https://Visit-tunisia.tn/">
-        <meta property="og:description" content="Pays accueillant, peuple généreux, séjour parfait">
+        <meta property="og:description" content="Meilleur site tunisien pour programmer vos sorties">
         <meta name="twitter:title" content="Visit Tunisia">
         <meta name="facebook:title" content="Visit Tunisia">
         <meta http-equiv="refresh" content="3000">
