--- a/accueil.html
+++ b/accueil.html
@@ -9,7 +9,7 @@
             <title>HELLO TUNISIA</title>
             <meta property="og:site_name" content="DECOUVREZ LA TUNISIE">
             <meta property="og:url" content="https://hello-tunisia.tn/">
-            <meta property="og:description" content="Pays accueillant, peuple généreux, séjour parfait">
+            <meta property="og:description" content="Meilleur site tunisien pour programmer vos sorties">
             <meta name="instagram:title" content="Hello Tunisia">
             <meta name="facebook:title" content="Hello Tunisia">
             <meta http-equiv="refresh" content="3000">
